# deskup

./: Cargo.toml  config.toml
src/: app.rs  main.rs
src/config/: mod.rs  types.rs
src/models/: anniversary.rs  holiday.rs  joke.rs  mod.rs  weather.rs
src/services/: anniversary.rs  holiday.rs  joke.rs  mod.rs  weather.rs
src/ui/: anniversary.rs  bookmarks.rs  header.rs  mod.rs  todos.rs  weather.rs
