[package]
name = "desktop_dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.17.0"
egui = "0.17.0"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"